Enhance and fix the search endpoint